--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/splitmoney
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.properties.hibernate.default_schema=public
 
 spring.flyway.enabled=true
 spring.flyway.default-schema=public
