--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.properties.hibernate.default_schema=public
 
 spring.flyway.enabled=true
 spring.flyway.default-schema=public
+spring.jpa.show-sql=true
