--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,4 @@ spring.jpa.properties.hibernate.default_schema=public
 
 spring.flyway.enabled=true
 spring.flyway.default-schema=public
+spring.jpa.show-sql=true
