--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
 			<version>5.4.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>com.github.database-rider</groupId>
+            <artifactId>rider-junit5</artifactId>
+            <version>1.41.0</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
