--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
             <version>1.41.0</version>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>json-schema-validator</artifactId>
+			<version>5.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
