chore(SPT-15): generate coverage badge

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,3 +38,6 @@ jobs:
       # You may pin to the exact commit or the version.
       # uses: cicirello/jacoco-badge-generator@f33476a5a3fd5a4f77cb5eef2ebe728c1dd5b921
       uses: cicirello/jacoco-badge-generator@v2.11.0
+      with:
+        badges-directory: .github/badges
+        generate-coverage-badge: true
